commit module wechat-service

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <name>wechat</name>
     <modules>
         <module>wechat-web</module>
+        <module>wechat-service</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
