--- a/wechat-web/src/main/resources/application.yml
+++ b/wechat-web/src/main/resources/application.yml
@@ -2,3 +2,10 @@
 server:
   port: 8080
 
+#下面这些内容是为了让MyBatis映射
+#指定Mybatis的Mapper文件
+mybatis:
+  mapper-locations: classpath:mappers/*xml
+  #指定Mybatis的实体目录
+  type-aliases-package: com.openwjk.wechatdao.mybatis.entity
+
