--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>wechat-web</module>
         <module>wechat-service</module>
+        <module>wechat-dao</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
