--- a/wechat-service/pom.xml
+++ b/wechat-service/pom.xml
@@ -7,7 +7,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>wechat-service</name>
     <packaging>jar</packaging>
-
+    <parent>
+        <groupId>com.openwjk</groupId>
+        <artifactId>wechat</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,16 +32,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
