--- a/wechat-web/src/main/resources/application.yml
+++ b/wechat-web/src/main/resources/application.yml
@@ -1,11 +1,33 @@
 # 应用服务 WEB 访问端口
 server:
   port: 8080
-
+spring:
+  application:
+    name: wechat
+  datasource:
+    name: wechat
+    url: jdbc:mysql://172.17.0.8:3306/wechat
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
+    druid:
+      filters: stat
+      maxActive: 20
+      initialSize: 1
+      maxWait: 60000
+      minIdle: 1
+      timeBetweenEvictionRunsMillis: 60000
+      minEvictableIdleTimeMillis: 300000
+      validationQuery: select 'x'
+      testWhileIdle: true
+      testOnBorrow: false
+      testOnReturn: false
+      poolPreparedStatements: false
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 #下面这些内容是为了让MyBatis映射
 #指定Mybatis的Mapper文件
 mybatis:
-  mapper-locations: classpath:mappers/*xml
+  mapper-locations: classpath:com/openwjk/wechatdao/dao/mapper/*xml
   #指定Mybatis的实体目录
-  type-aliases-package: com.openwjk.wechatdao.mybatis.entity
+  type-aliases-package: com/openwjk/wechatda/dao/model
 
